care-australia-uat/force-app/main/default/objects/Active_EX__c/Active_EX__c.object-meta.xml
<CustomObject>
    <label>Active_EX</label>
    <nameField>
        <label>Active_EX</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Active_EX</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>