care-australia-uat/force-app/main/default/objects/Active_EX__c/fields/AUSCode__c.field-meta.xml
<CustomField>
    <fullName>AUSCode__c</fullName>
    <label>AUS.Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>