care-australia-uat/force-app/main/default/objects/Active_EX__c/fields/Date_at_export__c.field-meta.xml
<CustomField>
    <fullName>Date_at_export__c</fullName>
    <label>Date_at_export</label>
    <type>Date</type>
</CustomField>