care-australia-uat/force-app/main/default/objects/Active_EX__c/fields/FullName__c.field-meta.xml
<CustomField>
    <fullName>FullName__c</fullName>
    <label>Full.Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>