care-australia-uat/force-app/main/default/objects/Active_EX__c/fields/FYDonorLevel__c.field-meta.xml
<CustomField>
    <fullName>FYDonorLevel__c</fullName>
    <label>FY.Donor.Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>