care-australia-uat/force-app/main/default/objects/Active_EX__c/fields/IN__c.field-meta.xml
<CustomField>
    <fullName>IN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IN</label>
    <type>Checkbox</type>
</CustomField>