care-australia-uat/force-app/main/default/objects/Active_EX__c/fields/PaymentDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentDate__c</fullName>
    <label>Payment.Date</label>
    <type>Date</type>
</CustomField>