care-australia-uat/force-app/main/default/objects/Active_EX__c/fields/SFConstituentId__c.field-meta.xml
<CustomField>
    <fullName>SFConstituentId__c</fullName>
    <label>SF.Constituent.Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>