care-australia-uat/force-app/main/default/objects/Active_EX__c/fields/Time_Period__c.field-meta.xml
<CustomField>
    <fullName>Time_Period__c</fullName>
    <label>Time_Period</label>
    <length>255</length>
    <type>Text</type>
</CustomField>